--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "material-components-web": "^0.44.0",
+    "@babel/runtime": "^7.3.1",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.10",
+    "@material/react-card": "^0.9.0",
+    "@material/react-tab-bar": "^0.9.0",
+    "contentful": "^7.3.0",
+    "material-ui": "^1.0.0-beta.47",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
