--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SERVICE_URL=http://localhost:5000/cocktails
-API_URL=http://localhost:5000/
+REACT_APP_SERVICE_URL=https://cocktails-backend.herokuapp.com/cocktails
+API_URL=https://cocktails-backend.herokuapp.com/
